Mock clients dashboard

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.sidenav-item{
+    font-size: 20px;
+    margin: 20px;
+    height: 100%;
+}
