--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,21 +1,16 @@
 <header 
-    class="height-50px mat-elevation-z4" 
+    class="height-7vh mat-elevation-z4" 
     fxFlex="100" 
-    fxLayout="column">
+    fxLayout="column"
+    fxLayoutGap="20px">
     
     <mat-toolbar 
         color="primary" 
         fxFlex="100" 
         fxLayout="row">
         
-        <button 
-            mat-icon-button 
-            aria-label="Example icon-button with menu icon">
-            
-            <mat-icon>menu</mat-icon>
-          
-        </button>
-        
         <h3 class="title">Applications Dashboard</h3>
+
+        <button mat-button [routerLink]="['/clientes']">Clientes</button>
     </mat-toolbar>
 </header>
