Change home page, created client form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,6 @@
   </form>
 </div>
 <img src="http://localhost:8080/company/1/logo" alt=""> -->
-<app-toolbar></app-toolbar>
-<router-outlet></router-outlet>
+<!--<app-toolbar></app-toolbar>-->
+<!--<router-outlet></router-outlet>-->
+<app-home></app-home>
