--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 20px;
     height: 100%;
 }
+.max-height{
+  height: 93vh;
+}
+
+.fab-padding{
+  padding: 20px;
+}
