--- a/src/app/clients/components/client-card/client-card.component.html
+++ b/src/app/clients/components/client-card/client-card.component.html
@@ -1,7 +1,7 @@
 <mat-card fxLayout="column" class="client-card">
     <mat-card-header fxLayout="row">
         <mat-card-title>{{name}}</mat-card-title>
-        <img src="{{image.getSrc()}}" class="logo">
+        <img src="{{image}}" class="logo">
         <mat-card-subtitle>{{occupation}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
